CustomObjects/objects/blng__CreditNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <label>Allocations</label>
        <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__CreditNoteAllocation__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Allocations__c + blng__Unallocations__c -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__CreditNote__c</fullName>
        <label>Credit Note</label>
        <referenceTo>blng__CreditNote__c</referenceTo>
        <relationshipName>CreditNoteCreditLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>CreditNoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAllocations__c</fullName>
        <label>Refunds (Allocations)</label>
        <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundsUnallocations__c</fullName>
        <label>Refunds (Unallocations)</label>
        <summarizedField>blng__RefundLineCreditNoteLine__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RefundLineCreditNoteLine__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RefundLineCreditNoteLine__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <formula>blng__RefundsAllocations__c - blng__RefundsUnallocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refunds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TaxCity__c</fullName>
        <label>Tax City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxCountry__c</fullName>
        <label>Tax Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxEngine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxEngine</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__LineTaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <label>Unallocations</label>
        <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__CreditNoteAllocation__c.blng__CreditNoteLine__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note Line</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>